# kafka-app

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.docs/: dev-setup.md  ecommerce-diagram.excalidraw
.github/: pull_request_template.md
docker/: docker-compose.yml
kafka/: Dockerfile  README.md  kafka.properties
projects/e-commerce/: README.md  consumer_service.py  email_service.py  fraud_detector_service.py  log_service.py  new_order_service.py
projects/e-commerce/utils/: color.py  display.py
projects/email-service/: pyproject.toml
projects/email-service/email_service/: main.py
projects/fraud-service/: pyproject.toml
projects/fraud-service/fraud_service/: main.py
projects/kafka-core/: pyproject.toml
projects/kafka-core/kafka_core/: common.py  consumer.py  producer.py
projects/log-service/: pyproject.toml
projects/log-service/log_service/: main.py
projects/order-service/: README.md  pyproject.toml
projects/order-service/order_service/: main.py  models.py
projects/user-service/: pyproject.toml
projects/user-service/user_service/: database.py  main.py  user_dao.py
py-kafka/: README.md  consumer.py  producer.py
python/: consumer.py  producer.py  venv.sh
spark-app/: .gitignore  main.py  run.sh
spark-app/src/: batch.py
spring-app/: README.md
spring-app/src/main/resources/: application.yml
spring-kafka/: README.md  pom.xml
spring-kafka/src/main/java/br/avcaliani/springkafka/: Application.java  SpringKafkaApplication.java
spring-kafka/src/main/java/br/avcaliani/springkafka/controller/: MessageController.java
spring-kafka/src/main/java/br/avcaliani/springkafka/kafka/: Consumer.java  Producer.java
spring-kafka/src/main/resources/: application.properties
