[tool.poetry]
name = "kafka-app"
version = "0.0.0"
description = "Kafka App, is actually few modules from a e-commerce that works via message queues."
authors = ["Anthony Caliani <github.com/avcaliani>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
email-service = {path = "projects/email-service", develop = true}
fraud-service = {path = "projects/fraud-service", develop = true}
log-service = {path = "projects/log-service", develop = true}
order-service = {path = "projects/order-service", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
