[tool.poetry]
name = "order-service"
version = "0.0.0"
description = "📦 e-Commerce - Order Service"
authors = ["Anthony Caliani <github.com/avcaliani>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
kafka-core = {path = "../kafka-core", develop = true}
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
